# arch-linux-guide

./: .gitignore  README.md
01_arch_linux_installation/: README.md
01_arch_linux_installation/chapters/: 01_pre-install.md  02_install.md  03_post-install.md  04_network.md  05_prog_ide.md
02_linux_handbook/: README.md
02_linux_handbook/chapters/: 01_basic_knowledge.md  02_files.md  02_shell.md  03_files.md  04_processes.md  04_users.md  05_disks_filesystems.md  05_users.md  06_disks_filesystems.md  06_network.md  07_dependencies.md  08_services_demons.md  09_services_demons.md  disks.md  network.md
03_arch_installer/: 00_config_init.sh  00_init.sh  01_pre_install.sh  02_arch_install.sh  02_os_install.sh  02_os_install_chroot.sh  03_arch_custom.sh  03_os_custom.sh  03_os_custom_chroot.sh  README.md  config.gen.sh  config.sh  main.sh  print.sh
assets/: template.md
chapters/: 01_install.md  01_pre-install.md  02_install.md  03_post-install.md  04_network.md  05_prog_ide.md
cli/: Cargo.toml  Makefile
cli/src/: lib.rs
cli/src/cli/: gen.rs  logs.rs  mod.rs  stats.rs
cli/src/logs/: mod.rs
scripts/: 00_pre_install.sh  01_arch_install.sh  02_arch_custom.sh  arch_install.sh  custom_profile.sh  go.mod
