[package]
name = "arch-linux-handbook-cli"
version = "0.1.0"
edition = "2021"
authors = ["Andrea Bertoli <andrea.bertpp@gmail.com>"]
description = "CLI to manage the notes of the Arch Linux Handbook."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
simple_logger = "3.0.0"
log = "0.4.17"