[package]
name = "arch-linux-handbook-cli"
version = "0.1.0"
edition = "2021"
authors = ["Andrea Bertoli <andrea.bertpp@gmail.com>"]
description = "CLI to manage the notes of the Arch Linux Handbook."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "arch-cli"
path = "src/bin/cli.rs"

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
log = "0.4.17"
env_logger = "0.9.1"